correct the alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -307,7 +307,9 @@ div {
 
 .parts{
     display: flex;
+    width: 100%;
     flex-direction: row;
+    align-items: center;
     width: 100%;
     background-color:rgb(58, 183, 42)
 }
